...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sYy-C0-UtB">
                                <rect key="frame" x="16" y="56" width="299" height="40"/>
                                <subviews>
                                    <searchBar contentMode="redraw" restorationIdentifier="searchbar" barStyle="black" searchBarStyle="prominent" text="" placeholder="Pesquisar por filmes, séries e mais..." translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="emu-ga-SLV">
                                        <rect key="frame" x="0.0" y="-8" width="260" height="56"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <scopeButtonTitles>
                                            <string>Title</string>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="kWU-wJ-ZLg"/>
                                    <constraint firstAttribute="width" constant="72" id="ocz-Nl-QNV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Filmes">
                                    <color key="titleColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="filmesAction:" destination="pWO-wH-QUV" eventType="touchUpInside" id="TAv-jV-dg4"/>
                                </connections>
                            </button>
...
