...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.8980392157" green="0.031372549020000001" blue="0.074509803920000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UGd-wJ-mop">
                                <rect key="frame" x="208" y="357" width="144" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Informações">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="acionarBotaoInformacoes:" destination="kow-bK-fZy" eventType="touchUpInside" id="2cU-Ni-Awx"/>
                                </connections>
                            </button>
...
                                                        <rect key="frame" x="15.5" y="300.5" width="344" height="40"/>
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="dOe-O2-qBo"/>
                                                            <constraint firstAttribute="width" constant="344" id="mbT-DC-GMs"/>
                                                        </constraints>
                                                        <state key="normal" title="Site do filme">
                                                            <color key="titleColor" red="0.8980392157" green="0.031372549020000001" blue="0.074509803920000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="irParaOSite:" destination="kow-bK-fZy" eventType="touchUpInside" id="iRI-LV-j5I"/>
                                                        </connections>
                                                    </button>
...
